# databases-2-project-1

./: .coveragerc  Dockerfile  README.md  app.py  auth.py  data.py  docker-compose.debug.yml  docker-compose.yml  increment_version.sh  mongo_data.py  postgresql_data.py  pyproject.toml  test-api.py  test.ipynb
.github/workflows/: ci-cd.yml
database/: 00-init.sql  01-procedures.sql
models/: schemas.py
mongo_data/: init-mongo.js
routes/: destiny_routes.py  posts_routes.py  travel_routes.py  user_routes.py  wishlist_routes.py
